fix:[CDS-70130]: Fallback to exact match for user query in case of multiple matches ( Jira step NG ) (#48469)
* fix: [CDS-70130]: Dirty commit

* fix: [CDS-70130]: rename value to userQuery

* fix: [CDS-70130]: add test

* fix: [CDS-70130]: rename value to userQuery

* fix: [CDS-70130]: Better logging